--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,10 @@
 sonar.organization=rez0n4n
 sonar.projectKey=Check1stDev_frontend-project-46
+# Проверяем папку проекта
+sonar.sources=src
+# Проверяем папку тестов
+sonar.tests=__tests__
+#Исключаем мусор из проверки
+sonar.exclusions=node_modules/**,coverage/**,dist/**,build/**,**/*.flow
+# проверяем папку проекта
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
